migrating auth to separate service